Replace all files with latest local version

--- a/blog-monitor-guide.html
+++ b/blog-monitor-guide.html
@@ -165,12 +165,25 @@
 </head>
 <body>
     <header class="main-header">
-        <!-- ... your existing header code ... -->
+        <div class="header-container">
+            <div class="logo">
+                <h1>Gamevora</h1>
+            </div>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
+            <div class="search-bar">
+                <input type="text" placeholder="Search blog posts...">
+                <button><i class="fas fa-search"></i></button>
+            </div>
+        </div>
     </header>
     <main>
-        <div class="affiliate-disclaimer">
-            <strong>Disclosure:</strong> This post may contain affiliate links. If you purchase through these links, we may earn a commission at no extra cost to you. <span style="font-size:0.95em;">As an Amazon Associate and affiliate, we earn from qualifying purchases. This helps support our work and keeps the site running!</span>
-        </div>
         <!-- Hero Section -->
         <section class="blog-hero">
             <span class="featured-badge"><i class="fas fa-desktop"></i> Monitor Guide 2025</span>
@@ -398,7 +411,33 @@
         </section>
     </main>
     <footer class="main-footer">
-        <!-- ... your existing footer code ... -->
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>About Gamevora</h3>
+                <p>Your trusted source for gaming gear reviews and recommendations.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="privacy.html">Privacy Policy</a></li>
+                    <li><a href="terms.html">Terms of Service</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Follow Us</h3>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Gamevora. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
